[tool.poetry]
name = "nestsmart"
version = "0.1.0"
description = ""
authors = ["Alvaro Aguilar <alvaro.aguilar.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
xarray = "^2023.10.1"
uqpy = "^4.1.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.7"
matplotlib = "^3.8.0"
icecream = "^2.1.3"
pytest = "^7.4.3"
ipytest = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp.*:DeprecationWarning",
]
